:lipstick: fixing page-header overlaps in page-anchors

--- a/django-data/image/static/css/custom.css
+++ b/django-data/image/static/css/custom.css
@@ -15,3 +15,12 @@ p {
   /* equal to assign class="text-justify" */
   text-align: justify !important;
 }
+
+/* fixed-page-header-overlaps-in-page-anchors
+   https://stackoverflow.com/a/28824157/4385116 */
+:target::before {
+  content: "";
+  display: block;
+  height: 60px; /* fixed header height*/
+  margin: -60px 0 0; /* negative fixed header height */
+}
